POWR_734 simplified the nav item focus and activ states and logo

--- a/web/themes/custom/cloudy/scss/components/_badge.scss
+++ b/web/themes/custom/cloudy/scss/components/_badge.scss
@@ -1,5 +1,6 @@
 .nav .nav-item .badge {
   vertical-align: top;
-  border-radius: .125em;
+  border-radius: $border-radius-tight;
   margin: 0 0 .25em .125em;
+  background-color: $navbar-menu-alert-badge-bg;
 }
