--- a/web/themes/custom/cloudy/scss/components/_header.scss
+++ b/web/themes/custom/cloudy/scss/components/_header.scss
@@ -1,25 +1,6 @@
 /* ------------------ Header ------------------ */
 
 #navbar-top {
-    padding: 0 1rem;
-}
-
-#navbar-top.navbar-dark .nav-link:hover,
-#navbar-top.navbar-dark .nav-link:focus {
-    color: rgba(255, 255, 255, 0.9);
-}
-
-#navbar-top.navbar-dark .nav-link {
-    color: rgba(255, 255, 255, 0.8);
-}
-
-#navbar-top.navbar-light .nav-link:hover,
-#navbar-top.navbar-light .nav-link:focus {
-    color: rgba(0, 0, 0, 0.7);
-}
-
-#navbar-top.navbar-light .nav-link {
-    color: rgba(0, 0, 0, 0.5);
 }
 
 @media (max-width: 33.9em) {
@@ -40,8 +21,6 @@
 
 .header {
   background-color: $white;
-  border-bottom: 1px solid rgba(6, 57, 107, 0.125);
-  box-shadow: 0px 1px 20px rgba(6, 57, 107, 0.1);
 }
 
 .banner {
@@ -52,10 +31,11 @@
 }
 
 .navbar {
-  padding: 0 1rem;
+  padding: 0 1.5rem;
   .navbar-brand {
     img {
-      max-width: 300px;
+      max-width: 280px;
+      padding: 0;
     }
   }
   .navbar-toggler {
@@ -64,9 +44,9 @@
     color: $black;
   }
   .navbar-nav .nav-link {
-    padding: 1rem 0rem;
     color: $black;
     @include links($black, $black, $black, $black);
+    padding: .875rem 0;
   }
 }
 
@@ -76,10 +56,10 @@
       padding: 1.5rem 1rem;
       transition: background-color 0.25s ease, font-size 0.25s ease;
       &:hover {
-        background-color: rgba($black, 0.15);
+        background: $navbar-menu-focus-bg;
       }
       &.active {
-        background-color: $main-menu-active-bg;
+        background-color: $navbar-menu-active-bg;
       }
     }
   }
