--- a/web/themes/custom/cloudy/scss/_theme-variables.scss
+++ b/web/themes/custom/cloudy/scss/_theme-variables.scss
@@ -17,10 +17,16 @@ $display-type-scale-base : major-second;
 $font-weight-semibold: 600;
 
 /* Spacing */
-
 $comment-spacer-x: 1.25em;
 $comment-spacer-y: 1.25em;
 
-
+/* Editor toolbar  */
 $editor-toolbar-active-bg: #000;
-$main-menu-active-bg: darken(#fff, 5%);
+
+/* Navbar */
+$navbar-menu-focus-bg: rgba(6, 57, 107, 0.05);
+$navbar-menu-active-bg: rgba(6, 57, 107, 0.05);
+$navbar-menu-alert-badge-bg: rgba(167, 41, 37, .9);
+
+/* Border radius for buttons and form elements */
+$border-radius-tight: .125em;
