--- a/web/themes/custom/cloudy/scss/components/_search.scss
+++ b/web/themes/custom/cloudy/scss/components/_search.scss
@@ -12,7 +12,7 @@
   }
   .form-search {
     border: $border-width solid $border-color;
-    border-radius: $border-radius-lg 0 0 $border-radius-lg !important;
+    border-radius: $border-radius-tight 0 0 $border-radius-tight !important;
     margin: 0;
   }
   .form-actions {
@@ -22,7 +22,7 @@
     color: $gray-700;
     background: $light;
     border: $border-width solid $border-color;
-    border-radius: 0 $border-radius-lg $border-radius-lg 0;
+    border-radius: 0 $border-radius-tight $border-radius-tight 0;
     margin: 0;
   }
 }
