POWR-734 set navbar-expand from lg to xl

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -45,7 +45,7 @@
     {{ 'Skip to main content'|t }}
 </a>
 <header id="header" class="header" aria-label="{{ 'Site header'|t}}" role="banner">
-  <nav class="navbar navbar-dark navbar-expand-lg" id="navbar-main">
+  <nav class="navbar navbar-dark navbar-expand-xl" id="navbar-main">
     <div class="container">
       {{ page.header }}
       {% if page.primary_menu or page.header_form %}
