--- a/web/themes/custom/cloudy/scss/components/_header.scss
+++ b/web/themes/custom/cloudy/scss/components/_header.scss
@@ -1,8 +1,5 @@
 /* ------------------ Header ------------------ */
 
-#navbar-top {
-}
-
 @media (max-width: 33.9em) {
     .navbar-toggleable-xs .navbar-nav .nav-item+.nav-item,
     .navbar-toggleable-xs.collapse.in .navbar-nav .nav-item {
@@ -49,8 +46,12 @@
     padding: .875rem 0;
   }
 }
-
-@include media-breakpoint-up(lg) {
+@include media-breakpoint-down(xs) {
+  .navbar .navbar-brand img {
+    max-width: 180px;
+  }
+}
+@include media-breakpoint-up(xl) {
   .navbar {
     .navbar-nav .nav-link {
       padding: 1.5rem 1rem;
