--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -7,6 +7,11 @@
   @extend .form-inline;
 }
 
+.form-select {
+  @extend .form-control;
+  margin-top: .25rem;
+}
+
 .button {
   @extend .btn;
   @extend .btn-primary;
