POWR-737 extending bootstrap button styles

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -186,38 +186,49 @@ ol.steps ul ul {
   margin-bottom: 0;
 }
 
-// Paragraph buttons
-
+// Buttons
 .btn {
-  white-space: normal;
+  border-radius: $border-radius-tight;
+}
+.button {
+  @extend .btn;
+}
+.button .fa, .fas {
+  margin: 0 .5rem 0 0;
+}
+.powr-btn-default {
+  @extend .btn;
+  @extend .btn-light;
+}
+.powr-btn-primary {
+  @extend .btn;
+  @extend .btn-primary;
+}
+.powr-btn-secondary {
+  @extend .btn;
+  @extend .btn-outline-primary;
+}
+.powr-btn-warning {
+  @extend .btn;
+  @extend .btn-warning;
+}
+.powr-btn-danger {
+  @extend .btn;
+  @extend .btn-danger;
+}
+.powr-btn-link {
+  @extend .btn;
+  @extend .btn-link;
 }
 
 .btn-cta {
   @extend .btn;
   @extend .btn-primary;
-  @extend .btn-lg;
-  color: $white;
-  background-color: $primary;
-  border: none;
-  &:hover {
-    text-decoration: none;
-    background-color: darken($primary, 5%);
-    border: none;
-  }
-  &:focus,
-  &:not(:disabled):not(.disabled):active:focus {
-    box-shadow: none;
-  }
 }
 
 .btn-cta-outline {
   @extend .btn;
   @extend .btn-outline-primary;
-  @extend .btn-lg;
-  &:focus,
-  &:not(:disabled):not(.disabled):active:focus {
-    box-shadow: none;
-  }
 }
 
 *[class*='btn--']:before {
@@ -235,11 +246,18 @@ ol.steps ul ul {
   cursor: default;
 }
 
+// Form buttons
 .form-actions button.btn {
   margin-right: 0.5rem;
 }
+// Form control
+.form--inline .form-item {
+  margin-right: 0;
+}
+.form-control {
+  border-radius: .125rem;
+}
 
-// Form buttons
 
 form .btn {
   margin-bottom: 0;
