--- a/web/themes/custom/cloudy/scss/components/_tables.scss
+++ b/web/themes/custom/cloudy/scss/components/_tables.scss
@@ -21,18 +21,18 @@ th {
   text-align: right;
 }
 thead th {
-  background: #f5f5f2;
-  border: solid #bfbfba;
+  background: $light;
+  border: solid darken($light, 20%);
   border-width: 1px 0;
-  color: #333;
-  text-transform: uppercase;
+  color: $dark;
+  font-weight: $font-weight-semibold;
 }
 tr {
-  border-bottom: 1px solid #e6e4df;
+  border-bottom: 1px solid darken($light, 20%);
   padding: 0.1em 0.6em;
 }
 thead > tr {
-  border-bottom: 1px solid #000;
+  border-bottom: darken($light, 20%);
 }
 tbody tr:hover,
 tbody tr:focus {
