--- a/web/themes/custom/cloudy/templates/field/field--node--field-get-directions.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--node--field-get-directions.html.twig
@@ -57,14 +57,14 @@
         <div{{ attributes.addClass(classes, 'field__items') }}>
             {% for item in items %}
                 <div{{ item.attributes.addClass('field__item') }}>
-                    <a class="btn btn-lg btn-primary" href="{{ item.content['#url'].toString() }}">{{ item.content['#title'] }}</a>
+                    <a class="btn powr-btn-link" href="{{ item.content['#url'].toString() }}">{{ item.content['#title'] }}</a>
                 </div>
             {% endfor %}
         </div>
     {% else %}
         {% for item in items %}
             <div{{ attributes.addClass(classes, 'field__item') }}>
-                <a class="btn btn-secondary" href="{{ item.content['#url'].toString() }}"><i class="fas fa-map-marker-alt"></i> {{ item.content['#title'] }}</a>
+                <a class="btn powr-btn-link" href="{{ item.content['#url'].toString() }}"><i class="fas fa-map-marker-alt"></i> {{ item.content['#title'] }}</a>
             </div>
         {% endfor %}
     {% endif %}
@@ -76,7 +76,7 @@
             {% endif %}
             {% for item in items %}
                 <div{{ item.attributes.addClass('field__item') }}>
-                    <a class="btn btn-lg btn-primary" href="{{ item.content['#url'].toString() }}">{{ item.content['#title'] }}</a>
+                    <a class="btn powr-btn-link" href="{{ item.content['#url'].toString() }}">{{ item.content['#title'] }}</a>
                 </div>
             {% endfor %}
             {% if multiple %}
