--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--fax-button.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--fax-button.html.twig
@@ -2,13 +2,13 @@
 {% block content %}
 
 {% if not content.field_link_style | render %}
-    {% set link_style = 'btn btn-primary' %}
+    {% set link_style = 'btn powr-btn-link' %}
 {% else %}
     {% set link_style = content.field_link_style[0] %}
 {% endif %}
 
-  <span class="fax {{ content.field_link_style[0] }}">
-    <i class="fas fa-fax"></i> {{ content.field_fax_number[0] }}
+  <span class="fax {{ content.field_link_style[0] }}"><i class="fas fa-fax"></i> 
+    {{ content.field_fax_number[0] }}
   </span>
 
 {% endblock %}
