POWR-714 - added ids to regions and mapped them in behat.yml, changed demo feature to site health check, disabled other tests

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -38,7 +38,7 @@
 {% if global_admin %}
   {{ page.global_admin }}
 {% endif %}
-<section>
+<section id="pre_header">
   {{ page.pre_header }}
 </section>
 <a href="#main" class="visually-hidden focusable skip-link">
@@ -47,14 +47,18 @@
 <header id="header" class="header" aria-label="{{ 'Site header'|t}}" role="banner">
   <nav class="navbar navbar-dark navbar-expand-xl" id="navbar-main">
     <div class="container">
-      {{ page.header }}
+      <div id="header_region">
+        {{ page.header }}
+      </div>
       {% if page.primary_menu or page.header_form %}
         <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="{{ 'Toggle navigation'|t }}">{{ 'Menu'|t }}</button>
         <div class="collapse navbar-collapse justify-content-end h-100" id="CollapsingNavbar">
-          {{ page.primary_menu }}
+          <div id="primary_menu">
+            {{ page.primary_menu }}
+          </div>
           {% set header_form = page.header_form|render %}
           {% if header_form %}
-            <div class="form-inline navbar-form">
+            <div class="form-inline navbar-form" id="header_form">
               {{ page.header_form }}
             </div>
           {% endif %}
@@ -65,17 +69,19 @@
 </header>
 {% set tabs = page.tabs|render %}
 {% if tabs %}
-  <div class="bg-light" role="navigation">
+  <div class="bg-light" role="navigation" id="tabs">
     {{ tabs }}
   </div>
 {% endif %}
 {% set messages = page.messages|render %}
 {% if messages %}
-  {{ page.messages }}
+  <div id="messages">
+    {{ page.messages }}
+  </div>
 {% endif %}
 {% set pre_content = page.pre_content|render %}
 {% if pre_content %}
-  <section class="container">
+  <section class="container" id="pre_content">
     {{ page.pre_content }}
   </section>
 {% endif %}
@@ -86,10 +92,10 @@
   <div class="container">
     <div class="row">
       {% if page.footer_first or page.footer_second %}
-        <div class="col-sm-6">
+        <div class="col-sm-6" id="footer_first">
           {{ page.footer_first }}
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6" id="footer_second">
           {{ page.footer_second }}
         </div>
       {% endif %}
