--- a/web/themes/custom/cloudy/scss/components/_content.scss
+++ b/web/themes/custom/cloudy/scss/components/_content.scss
@@ -42,7 +42,7 @@ ol.steps {
 }
 
 #block-feedbacklink .content {
-  @extend .container;
+  @extend .container-fluid;
   @extend .border;
   @extend .bg-light;
   @extend .rounded;
