POWR-737 continued button refactoring

--- a/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
+++ b/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
@@ -7,7 +7,7 @@ $cyan: #17a2b8;
 $green: #046a38;
 $red: #dc3545;
 $yellow: #ffb81c;
-$gray: #F8F9FA;
+$gray: #DEE2E6;
 
 $light: $gray;
 $primary: $blue-dark;
