--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -7,11 +7,6 @@
   @extend .form-inline;
 }
 
-.button {
-  @extend .btn;
-  @extend .btn-primary;
-}
-
 .views-exposed-form form {
   margin-bottom: 2rem;
 }
@@ -52,4 +47,18 @@ form label {
 /* put a little padding in styled CKEditor body */
 .cke_editable {
   margin: 10px;
+}
+
+// Form control
+.form--inline .form-item {
+  margin-right: 0;
+}
+.form-control {
+  border-radius: .125rem;
+}
+
+// Form check input
+
+td .form-check-input {
+  margin-left: 0rem;
 }
