--- a/web/themes/custom/cloudy/scss/components/_header.scss
+++ b/web/themes/custom/cloudy/scss/components/_header.scss
@@ -36,10 +36,13 @@
     }
   }
   .navbar-toggler {
+    @extend .btn;
+    @extend .btn-light;
+    border-radius: 0;
     padding: 1.5rem 1rem;
     line-height: 1.5rem;
     color: $black;
-  }
+}
   .navbar-nav .nav-link {
     color: $black;
     @include links($black, $black, $black, $black);
@@ -57,10 +60,10 @@
       padding: 1.5rem 1rem;
       transition: background-color 0.25s ease, font-size 0.25s ease;
       &:hover {
-        background: $navbar-menu-focus-bg;
+        background: $light;
       }
       &.active {
-        background-color: $navbar-menu-active-bg;
+        background-color: $light;
       }
     }
   }
