--- a/web/themes/custom/cloudy/scss/components/_tables.scss
+++ b/web/themes/custom/cloudy/scss/components/_tables.scss
@@ -21,7 +21,7 @@ th {
   text-align: right;
 }
 thead th {
-  background: $light;
+  background: lighten($light, 8%);
   border: solid darken($light, 20%);
   border-width: 1px 0;
   color: $dark;
