--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--fax-button.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--fax-button.html.twig
@@ -7,8 +7,7 @@
     {% set link_style = content.field_link_style[0] %}
 {% endif %}
 
-  <span class="fax {{ content.field_link_style[0] }}"><i class="fas fa-fax"></i> 
-    {{ content.field_fax_number[0] }}
+  <span class="fax {{ content.field_link_style[0] }}"><i class="fas fa-fax"></i>{{ content.field_fax_number[0] }}
   </span>
 
 {% endblock %}
