--- a/web/themes/custom/cloudy/scss/_components.scss
+++ b/web/themes/custom/cloudy/scss/_components.scss
@@ -2,6 +2,7 @@
 @import 'components/_alerts';
 @import 'components/_badge';
 @import 'components/_breadcrumb';
+@import 'components/_buttons';
 @import 'components/_card';
 @import 'components/_columns';
 @import 'components/content';
