POWR-737 fixed a mistake

--- a/web/themes/custom/cloudy/scss/components/_header.scss
+++ b/web/themes/custom/cloudy/scss/components/_header.scss
@@ -36,10 +36,9 @@
     }
   }
   .navbar-toggler {
-    @extend .btn;
-    @extend .btn-light;
+    background-color: $white;
     border-radius: 0;
-    padding: 1.5rem 1rem;
+    padding: 1.5rem;
     line-height: 1.5rem;
     color: $black;
 }
