--- a/web/themes/custom/cloudy/scss/components/_search.scss
+++ b/web/themes/custom/cloudy/scss/components/_search.scss
@@ -19,8 +19,8 @@
     @extend .input-group-append;
   }
   .form-submit {
-    color: $gray-700;
-    background: $light;
+    @extend .btn;
+    @extend .btn-light;
     border: $border-width solid $border-color;
     border-radius: 0 $border-radius-tight $border-radius-tight 0;
     margin: 0;
