POWR-737 update to button default

--- a/web/themes/custom/cloudy/scss/components/_buttons.scss
+++ b/web/themes/custom/cloudy/scss/components/_buttons.scss
@@ -1,7 +1,10 @@
 // Buttons
-  .btn, .button {
-    @extend .btn;
+.btn {
     border-radius: $border-radius-tight;
+}
+  .button {
+    @extend .btn;
+    @extend .btn-light;
   }
 
   .paragraphs-icon-button {
@@ -13,14 +16,15 @@
   .button .fa, .fas {
     margin: 0 .5rem 0 0;
   }
+
+// Editor buttons 
+//   .button--primary {
+//     @extend .btn-primary;
+//   }
   
-  .button--primary {
-    @extend .btn-primary;
-  }
-  
-  .button--danger {
-    @extend .btn-outline-danger;
-  }
+//   .button--danger {
+//     @extend .btn-outline-danger;
+//   }
 
   .powr-btn-default {
     @extend .btn-light;
