--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -51,7 +51,7 @@ form label {
 
 // Form control
 .form--inline .form-item {
-  margin-right: 0;
+  margin-right: .5em;
 }
 .form-control {
   border-radius: .125rem;
