POWR-792 Add space between titlebar items and force title text to grow

--- a/web/themes/custom/cloudy/scss/components/_dialog.scss
+++ b/web/themes/custom/cloudy/scss/components/_dialog.scss
@@ -2,6 +2,10 @@
   .ui-dialog-titlebar {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    .ui-dialog-title {
+      flex-grow: 1;
+    }
     .ui-dialog-titlebar-close {
       position: static;
       width: unset;
