POWR-798 point ckeditor to newish style.bundle.css

--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -7,7 +7,7 @@
   @extend .form-inline;
 }
 
-.form-select {
+select.form-select, input.chosen-container {
   @extend .form-control;
   margin-top: .25rem;
 }
