POWR-798 fix a style issue and make chosen forms a bit better

--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -7,9 +7,10 @@
   @extend .form-inline;
 }
 
-select.form-select, input.chosen-container {
+select.form-select {
   @extend .form-control;
   margin-top: .25rem;
+  border-radius: .125rem;
 }
 
 .views-exposed-form form {
