--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -6,6 +6,8 @@
 @import 'theme-variables';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+// Bootstrap
+@import '~bootstrap4-chosen/bootstrap4-chosen';
 // Mixins
 @import 'mixins';
 // Typography
