POWR-760 Fix datepicker width

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -351,3 +351,7 @@ issue is caused by inheriting .button */
   position: static;
   padding: ($spacer / 2) $spacer;
 }
+
+.ui-datepicker {
+  width: auto;
+}
