POWR-772 - expanded scope to include embed options for responsive images, in addition to a basic 50% align right option.

--- a/web/themes/custom/cloudy/scss/components/_media.scss
+++ b/web/themes/custom/cloudy/scss/components/_media.scss
@@ -19,8 +19,17 @@
 }
 /* "embed-image" and "embed-video" classes are added by filter portland_media_embed_helper_classes */
 .embed-image.align-right {
+    float: right;
     max-width: 50%;
     margin-left: 2rem;
+}
+.embed-image.responsive-right {
+  float: right;
+  max-width: 50%;
+  margin-left: 2rem;
+}
+.embed-image.responsive-full {
+  max-width: 100%;
 }
 .embed-video.align-right {
   width: 50%;
