POWR-742 Getting debug to work and adding/changing alert severity

--- a/web/themes/custom/cloudy/scss/components/_alerts.scss
+++ b/web/themes/custom/cloudy/scss/components/_alerts.scss
@@ -8,7 +8,10 @@
 }
 
 .portland-alert {
-  
+  a {
+    @extend .alert-link;
+  }
+
   // Adjust close link position
   .close {
     position: relative;
