POWR-742 Iterates alert style, adds updated date back to page view

--- a/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
+++ b/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
@@ -1,23 +1,32 @@
 /* Colors */
 
-// Assigning color names to specific hex values
+// Assigns color names to specific hex values
 $blue: #418fde;
 $blue-dark: #1b5a99;
 $cyan: #17a2b8;
 $green: #046a38;
 $red: #dc3545;
 $yellow: #ffb81c;
-$gray: #DEE2E6;
+$gray: #f8f9fa;
 
-$light: $gray;
+// Assigns primary, secondary, light, and dark to specific colors
 $primary: $blue-dark;
 $secondary: $blue-dark;
+$light: $gray;
 
 // Reassign color vars to semantic color scheme
 $brand-primary: $primary;
 $brand-secondary: $secondary;
 
-/* Links */
+// U.S. Web Design System colors
+$primary-alt: #02bfe7;
+$primary-alt-lightest: #e1f3f8;
+$gold: #fdb81e;
+$gold-lightest: #fff1d2;
+$secondary-alt: #e31c3d;
+$secondary-alt-lightest: #f9dede;
+$green-alt: #2e8540;
+$green-alt-lightest: #e7f4e4;
 
 // Anchor elements
 $link-color: $blue-dark;
