--- a/web/themes/custom/cloudy/scss/components/_alerts.scss
+++ b/web/themes/custom/cloudy/scss/components/_alerts.scss
@@ -7,22 +7,40 @@
   width: 100%;
 }
 
-.portland-alert {
-  a {
-    // @extend .alert-link;
-  }
+// Adjusts base class
+.alert {
+  border: none;
+  border-radius: 0;
+}
 
-  // Adjust close link position
-  .close {
-    position: relative;
-    text-shadow: none;
-    white-space: nowrap;
-    opacity: 1;
-    &:not(:disabled):not(.disabled) {
-      @include hover-focus {
-        color: inherit;
-        opacity: 1;
-      }
+// Adjusts colors 
+.alert-info {
+  color: $black;
+  background-color: $primary-alt-lightest;
+  border-left: 15px solid $primary-alt;
+}
+.alert-danger {
+  color: $black;
+  background-color: $secondary-alt-lightest;
+  border-left: 15px solid $secondary-alt;
+}
+.alert-warning {
+  color: $black;
+  background-color: $gold-lightest;
+  border-left: 15px solid $gold;
+}
+
+// Adjusts close button position
+.close {
+  position: relative;
+  text-shadow: none;
+  white-space: nowrap;
+  color: lighten($black, 15%);
+  opacity: 1;
+  &:not(:disabled):not(.disabled) {
+    @include hover-focus {
+      color: inherit;
+      opacity: 1;
     }
   }
 }
