--- a/web/themes/custom/cloudy/templates/content/alert/node--alert--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/alert/node--alert--teaser.html.twig
@@ -1,3 +1,6 @@
-{% include 'node--alert.html.twig' with {
+{% embed 'node--alert.html.twig' with {
   'dismissable': TRUE
 } %}
+{% block time %}
+{% endblock %}
+{% endembed %}
