--- a/web/themes/custom/cloudy/templates/content/alert/node--alert.html.twig
+++ b/web/themes/custom/cloudy/templates/content/alert/node--alert.html.twig
@@ -28,17 +28,21 @@
         {{ label }}
       </label>
       {% if dismissable %}
-        <span>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Dismiss notification">
-              <span{{ dismiss_attribute.addClass(dismiss_classes) }} aria-hidden="true">
-                <i{{ dismiss_icon_attribute.addClass(dismiss_icon_classes) }}></i>
-                Dismiss
-              </span>
-            </button>
-          </span>
+      <span>
+          <button type="button" class="close" data-dismiss="alert" aria-label="Dismiss notification">
+            <span{{ dismiss_attribute.addClass(dismiss_classes) }} aria-hidden="true">
+              <i{{ dismiss_icon_attribute.addClass(dismiss_icon_classes) }}></i>
+              Dismiss
+            </span>
+          </button>
+        </span>
       {% endif %}
   </header>
   <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
     {{ content }}
+    {% block time %}
+      <span class="small">Last updated: </span><span class="small">{{ node.revision_timestamp.value|date('g:i a M j, Y') }}</span>
+    {% endblock %}
   </div>
 </article>
+
