--- a/web/themes/custom/cloudy/scss/_components.scss
+++ b/web/themes/custom/cloudy/scss/_components.scss
@@ -8,6 +8,7 @@
 @import 'components/content';
 @import 'components/dialog';
 @import 'components/dropbutton';
+@import 'components/_entity-browser';
 @import 'components/_field';
 @import 'components/_file';
 @import 'components/_form';
