POWR-791 - tweaked some styles, changed thumbanil size to 200

--- a/web/themes/custom/cloudy/scss/components/_entity-browser.scss
+++ b/web/themes/custom/cloudy/scss/components/_entity-browser.scss
@@ -12,12 +12,14 @@
 .view.eb-media .views-col {
   margin: 0 1em 0 0;
 }
-.view.eb-media .col-md { /* conflict between bootstrap grid and views grid, need less width to accommodate margin */
-  padding: 0;
-  max-width: 220px;
-}
 .view.eb-media .row { 
   margin-left: 0;
+  margin-bottom: 0;
+}
+.view.eb-media .col-md { /* conflict between bootstrap grid and views grid, need less width to accommodate margin */
+  padding: 0;
+  max-width: 42%;
+  margin-bottom: 1em;
 }
 .view.eb-media .views-exposed-form {
   padding: 0.5em;
