POWR-791 - enabled sticky select button for entity browsers, removed two obsolete image entity browsers

--- a/web/themes/custom/cloudy/scss/components/_entity-browser.scss
+++ b/web/themes/custom/cloudy/scss/components/_entity-browser.scss
@@ -24,13 +24,21 @@
 .view.eb-media .views-exposed-form {
   padding: 0.5em;
 }
-.eb-media #edit-actions {
+.entity-browser-form #edit-actions {
   position: fixed;
   bottom: 0;
   margin: 0;
   width: 100%;
   background-color: #ffffff;
   z-index: 101;
+  padding-top: 10px;
+}
+.eb-media #edit-actions {
+  position: unset;
+  bottom: unset;
+  width: auto;
+  background-color: unset;
+  z-index: auto;
   padding-top: 10px;
 }
 .eb-media .form-item {
