POWR-791 - made entity browser select button sticky, misc css adjustments, added image grid overlay, disabled unused view displays, removed document entity browser, updated paths for file icons to be absolute so they work in all instances

--- a/web/themes/custom/cloudy/scss/components/_entity-browser.scss
+++ b/web/themes/custom/cloudy/scss/components/_entity-browser.scss
@@ -21,6 +21,31 @@
   max-width: 42%;
   margin-bottom: 1em;
 }
+.eb-media .image-grid-overlay {
+  position: absolute;
+  padding: 10px;
+  font-size: 1.0em;
+  z-index: -1;
+  line-height: 1.25em;
+}
+.eb-media .views-col.selected .image-grid-overlay {
+  z-index: -1;
+}
+.eb-media .media-thumbnail:hover {
+  opacity: 0.2;
+}
+.eb-media .views-col.selected .media-thumbnail:hover {
+  opacity: 1;
+}
+.eb-media .image-grid-overlay div {
+  margin-bottom: 0.5em;
+}
+.eb-media .image-grid-overlay .image-name {
+  font-weight: bold;
+}
+.eb-media table.views-table tr {
+  cursor: pointer;
+}
 .view.eb-media .views-exposed-form {
   padding: 0.5em;
 }
