--- a/web/themes/custom/cloudy/scss/components/_media.scss
+++ b/web/themes/custom/cloudy/scss/components/_media.scss
@@ -4,6 +4,22 @@
  * Media items, typically embedded.
  */
 
+ // Bootstrap only sets max-width, not fully responsive?
+.img-fluid {
+  width: 100%;
+}
+
+// Figures
+.figure {
+  // Bootstrap uses inline-block which breaks our
+  //  full width media sitting on top of each other
+  @extend .d-flex;
+  flex-direction: column;
+  .figure-caption {
+    margin-top: 0rem;
+  }
+}
+
 .document-unpublished {
   margin-right: 10px;
 }
