--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -17,3 +17,17 @@
     }
   }
 }
+
+.card-group--related .view-content {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-auto-rows: 1fr;
+  grid-column-gap: $card-deck-margin;
+  grid-row-gap: $card-deck-margin;
+  @include media-breakpoint-up(md) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @include media-breakpoint-up(lg) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
