POWR-765 Layout related cards as a grid

--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -18,12 +18,12 @@
   }
 }
 
+// create an equal height grid
 .card-group--related .view-content {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   grid-auto-rows: 1fr;
-  grid-column-gap: $card-deck-margin;
-  grid-row-gap: $card-deck-margin;
+  grid-gap: $card-deck-margin;
   @include media-breakpoint-up(md) {
     grid-template-columns: repeat(2, 1fr);
   }
