POWR-765 Update ds card template

--- a/web/themes/custom/cloudy/templates/ds/layout--ds-card.html.twig
+++ b/web/themes/custom/cloudy/templates/ds/layout--ds-card.html.twig
@@ -16,30 +16,13 @@
  */
 #}
 {% set outer_classes = [
-  'card'
+  'card',
+  'flex-column-reverse'
 ]%}
 
 {% set first_classes = [
-  'card-body'
+  'card-body',
 ]%}
-
-{# {% set outer_classes = [
-  'd-flex',
-  'flex-column-reverse',
-  'flex-md-row',
-  'mb-4',
-  'w-75',
-]%} #}
-
-{# {% set first_classes = [
-  'w-75',
-  'mt-3',
-  'mt-md-0',
-]%} #}
-
-{# {% set second_classes = [
-  'w-25',
-]%} #}
 
 <{{ outer_wrapper }}{{ attributes.addClass(outer_classes) }}>
 
@@ -49,7 +32,7 @@
     {{ first }}
   </{{ first_wrapper }}>
 
-  <{{ second_wrapper }}{{ second_attributes.addClass(second_classes) }}>
+  <{{ second_wrapper }}>
     {{ second }}
   </{{ second_wrapper }}>
 
