POWR-758 - set body UL width same as P, added margin at bottom of embedded add entity form to account for sticky submit button.

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -323,6 +323,7 @@ blockquote,
 hr,
 .list-group-item,
 .paragraph ul,
+.field--name-field-body-content ul,
 .paragraph ol,
 .figure-caption,
 .teaser__tags {
