--- a/web/themes/custom/cloudy/scss/components/_entity-browser.scss
+++ b/web/themes/custom/cloudy/scss/components/_entity-browser.scss
@@ -77,6 +77,9 @@
 .eb-media .form-item .form-text {
   width: 100% !important;
 }
+form.entity-browser-form {
+  margin-bottom: 55px;
+}
 @media (min-width: 991.98px) {
   .eb-media .form-item label {
     height: 35px;
