POWR-758 - Also limit width of OLs in body content field

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -324,6 +324,7 @@ hr,
 .list-group-item,
 .paragraph ul,
 .field--name-field-body-content ul,
+.field--name-field-body-content ol,
 .paragraph ol,
 .figure-caption,
 .teaser__tags {
