POWR-758 - set OL and UL width in CKEditor context

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -325,6 +325,8 @@ hr,
 .paragraph ul,
 .field--name-field-body-content ul,
 .field--name-field-body-content ol,
+body.cke_editable_themed ul,
+body.cke_editable_themed ol,
 .paragraph ol,
 .figure-caption,
 .teaser__tags {
