POWR-742 make alert paragraph full width

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -318,15 +318,19 @@ span.mailto::before {
   padding-right: 0;
 }
 
-p,
-blockquote,
-hr,
-.list-group-item,
-.paragraph ul,
-.paragraph ol,
-.figure-caption,
-.teaser__tags {
-  max-width: 729px;
+.main-content {
+  p,
+  blockquote,
+  hr,
+  .list-group-item,
+  .field--name-field-body-content ul,
+  .field--name-field-body-content ol,
+  body.cke_editable_themed ul,
+  body.cke_editable_themed ol,
+  .figure-caption,
+  .teaser__tags {
+    max-width: 729px;
+  }
 }
 
 /* TODO: Fix the media flex issue that inherits from Classy */
