POWR-742 move around block, remove old notifications views, add new notifications views, styling

--- a/web/themes/custom/cloudy/scss/components/_alerts.scss
+++ b/web/themes/custom/cloudy/scss/components/_alerts.scss
@@ -3,7 +3,8 @@
  * Visual styles for alerts in Cloudy.
  */
 
- .block-views-blockalerts-block-1 {
+ .block-views-blockalerts-block-1,
+ .block-views-blockgroup-notifications-block-1 {
   width: 100%;
 }
 
