POWR-742 fix some things

--- a/web/themes/custom/cloudy/templates/content/notification/node--notification.html.twig
+++ b/web/themes/custom/cloudy/templates/content/notification/node--notification.html.twig
@@ -3,9 +3,8 @@
 {% set classes= [
     'portland-alert',
     'alert',
-    node.field_severity.value == 10 ? 'alert-danger',
-    node.field_severity.value == 20 ? 'alert-warning',
-    node.field_severity.value == 30 ? 'alert-info',
+    node.field_notification_severity.value == 20 ? 'alert-warning',
+    node.field_notification_severity.value == 30 ? 'alert-info',
     dismissable ? 'd-none',
 ]%}
 
@@ -19,7 +18,6 @@
   'fa-window-close',
   'mr-2',
 ] %}
-{{ devel_breakpoint() }}
 
 <article{{ attributes.addClass(classes) }} data-nid="{{ node.nid.value }}" data-changed="{{ node.revision_timestamp.value }}" role="alert" aria-live="polite">
   <header>
