--- a/web/themes/custom/cloudy/templates/content/page/node--page--search-result.html.twig
+++ b/web/themes/custom/cloudy/templates/content/page/node--page--search-result.html.twig
@@ -1,4 +1,4 @@
-<div class="teaser d-flex flex-column align-items-start mb-5">
+<div class="d-flex flex-column align-items-start mb-4">
   <h3 class="order-2">
     <a href="{{ url }}" rel="bookmark">
       {{ label }}</a>
@@ -11,15 +11,12 @@
   {% if node.field_page_type.value %}
     <span class="badge badge-pill badge-light mb-1 order-1 align-self-start">
       <span class="sr-only">Type is</span>
-      {% for i, topic in node.field_page_type %}
-          {% if node.field_page_type[i].entity %}
-            {% set page_type = {
-                url: path('entity.taxonomy_term.canonical', {'taxonomy_term': node.field_page_type[i].entity.id}),
-                title: node.field_page_type[i].entity.name.value,
-              }%}
-              {{ page_type.title }}
-          {% endif %}
-      {% endfor %}
+        {% if node.field_page_type[i].entity %}
+          {% set page_type = {
+              title: node.field_page_type[i].entity.name.value,
+            }%}
+            {{ page_type.title }}
+        {% endif %}
     </span>
   {% endif %}
 </div>
