--- a/web/themes/custom/cloudy/templates/content/city-service/node--city-service--search-result.html.twig
+++ b/web/themes/custom/cloudy/templates/content/city-service/node--city-service--search-result.html.twig
@@ -1,4 +1,4 @@
-<div class="teaser d-flex flex-column align-items-start mb-5">
+<div class="d-flex flex-column align-items-start mb-4">
   <h3 class="order-2">
     <a href="{{ url }}" rel="bookmark">
       {{ label }}</a>
