--- a/web/themes/custom/cloudy/templates/content/city-service/node--city-service--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/city-service/node--city-service--teaser.html.twig
@@ -1,8 +1,8 @@
-<div class="teaser d-flex flex-column align-items-start mb-5">
-  <h3>
+<div class="d-flex flex-column align-items-start mb-4">
+  <h2>
     <a href="{{ url }}" rel="bookmark">
       {{ label }}</a>
-  </h3>
+  </h2>
   {{ content.field_popular }}
   {% if node.field_summary.value %}
     <div>
