--- a/web/themes/custom/cloudy/templates/content/groups/group--program--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/groups/group--program--teaser.html.twig
@@ -1,8 +1,8 @@
-<div class="teaser d-flex flex-column align-items-start mb-5">
-  <h3>
+<div class="d-flex flex-column align-items-start mb-4">
+  <h2>
     <a href="{{ url }}" rel="bookmark">
       {{ label }}</a>
-  </h3>
+  </h2>
   {% if content.field_summary %}
     <div>
       <p>{{ content.field_summary.0 }}</p>
