--- a/web/themes/custom/cloudy/templates/media/media--document--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/media/media--document--embedded.html.twig
@@ -26,7 +26,7 @@
     {% if (media.isPublished() is same as(FALSE)) %}
     <span class="badge badge-danger document-unpublished">Unpublished</span>
     {% endif %}
-    <a href="{{ document_url }}">{{ file_icon_markup(media.field_mime_type.0.value) }} {{ name }}</a>
+    <a href="{{ fileURL }}">{{ file_icon_markup(media.field_mime_type.0.value) }} {{ name }}</a>
     {{ file_size_string(media.field_file_size.0.value) }}
   {% endif %}
 </article>
