POWR-842 - disabled existing tests, created new heartbeat test, added region IDs

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -51,7 +51,9 @@
       {% if page.primary_menu or page.header_form %}
         <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="{{ 'Toggle navigation'|t }}">{{ 'Menu'|t }}</button>
         <div class="collapse navbar-collapse justify-content-end h-100" id="CollapsingNavbar">
+          <div id="primary_menu">
           {{ page.primary_menu }}
+          </div>
           {% set header_form = page.header_form|render %}
           {% if header_form %}
             <div class="form-inline navbar-form">
@@ -86,10 +88,10 @@
   <div class="container">
     <div class="row">
       {% if page.footer_first or page.footer_second %}
-        <div class="col-sm-6">
+        <div class="col-sm-6" id="footer_first">
           {{ page.footer_first }}
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6" id="footer_second">
           {{ page.footer_second }}
         </div>
       {% endif %}
