--- a/web/themes/custom/cloudy/templates/content/city-service/node--city-service--teaser.html.twig
+++ b/web/themes/custom/cloudy/templates/content/city-service/node--city-service--teaser.html.twig
@@ -1,12 +1,16 @@
 <div class="d-flex flex-column align-items-start mb-4">
-  <h2>
+  <h2 class="order-2">
     <a href="{{ url }}" rel="bookmark">
       {{ label }}</a>
   </h2>
   {{ content.field_popular }}
   {% if node.field_summary.value %}
-    <div>
+    <div class="order-3">
       <p>{{ node.field_summary.value }}</p>
     </div>
   {% endif %}
+  <a class="badge badge-pill padge-light mb-1 order-1 align-self-start">
+    <span class="sr-only">Type is</span>
+    Service
+  </a>
 </div>
