POWR-842 - added region to link click test, changed press to click on one failing link, added id to tabs region.

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -65,7 +65,7 @@
 </header>
 {% set tabs = page.tabs|render %}
 {% if tabs %}
-  <div class="bg-light" role="navigation">
+  <div class="bg-light" role="navigation" id="page_tabs">
     {{ tabs }}
   </div>
 {% endif %}
