POWR-698 - updated script tag

--- a/web/themes/custom/cloudy/templates/layout/html.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/html.html.twig
@@ -39,7 +39,7 @@
     <css-placeholder token="{{ placeholder_token }}">
     <js-placeholder token="{{ placeholder_token }}">
     <!-- Start of portlandoregon Zendesk Widget script -->
-    <script type="text/script" id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=6cf7020d-1d26-4439-9a87-d52c2f171636"></script>
+    <script type="text/javascript" id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=6cf7020d-1d26-4439-9a87-d52c2f171636"></script>
     <!-- End of portlandoregon Zendesk Widget script -->
   </head>
   <body{{ attributes.addClass(body_classes) }}>
