POWR-781 Add ds card templates

--- a/web/themes/custom/cloudy/templates/ds/layout--ds-card.html.twig
+++ b/web/themes/custom/cloudy/templates/ds/layout--ds-card.html.twig
@@ -16,23 +16,19 @@
  */
 #}
 {% set outer_classes = [
-  'card',
+  'd-flex',
   'flex-column-reverse'
-]%}
-
-{% set first_classes = [
-  'card-body',
 ]%}
 
 <{{ outer_wrapper }}{{ attributes.addClass(outer_classes) }}>
 
   {{ title_suffix.contextual_links }}
 
-  <{{ first_wrapper }}{{ first_attributes.addClass(first_classes) }}>
+  <{{ first_wrapper }}{{ first_attributes }}>
     {{ first }}
   </{{ first_wrapper }}>
 
-  <{{ second_wrapper }}>
+  <{{ second_wrapper }}{{ second_attributes }}>
     {{ second }}
   </{{ second_wrapper }}>
 
