POWR-781 Add bottom margin to featured cards

--- a/web/themes/custom/cloudy/templates/ds/layout--ds-card--large.html.twig
+++ b/web/themes/custom/cloudy/templates/ds/layout--ds-card--large.html.twig
@@ -1,6 +1,6 @@
 {% extends "layout--ds-card.html.twig" %}
 
-{% set outer_classes = attributes.addClass('flex-lg-row') %}
+{% set outer_classes = attributes.addClass('flex-lg-row mb-4') %}
 
 {% set first_classes = first_attributes.addClass('card-grid-body') %}
 
