POWR-858 initial button class refactoring with Britt

--- a/web/themes/custom/cloudy/scss/components/_buttons.scss
+++ b/web/themes/custom/cloudy/scss/components/_buttons.scss
@@ -1,14 +1,13 @@
 // Buttons
-.btn {
-    border-radius: $border-radius-tight;
-}
+  .btn {
+      border-radius: $border-radius-tight;
+  }
+
   .button {
     @extend .btn;
-    @extend .btn-light;
   }
 
   .paragraphs-icon-button {
-    @extend .btn;
     @extend .btn-light;
     @extend .btn-sm;
   }
@@ -17,14 +16,26 @@
     margin: 0 .5rem 0 0;
   }
 
+  // Form buttons
+  .form-actions button.btn {
+    margin-right: 0.5rem;
+  }
+  form .btn {
+    margin-bottom: 0;
+  }
+  input.form-submit:not(.button--primary) {
+    @extend .btn-light;
+  }
+
 // Editor buttons 
-//   .button--primary {
-//     @extend .btn-primary;
-//   }
+  .button--primary {
+    @extend .btn-primary;
+    @extend .btn-lg;
+  }
   
-//   .button--danger {
-//     @extend .btn-outline-danger;
-//   }
+  .button--danger {
+    @extend .btn-outline-danger;
+  }
 
   .powr-btn-default {
     @extend .btn-light;
@@ -72,10 +83,3 @@
     cursor: default;
   }
   
-  // Form buttons
-  .form-actions button.btn {
-    margin-right: 0.5rem;
-  }
-  form .btn {
-    margin-bottom: 0;
-  }
