--- a/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
+++ b/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
@@ -7,7 +7,7 @@ $cyan: #17a2b8;
 $green: #046a38;
 $red: #dc3545;
 $yellow: #ffb81c;
-$gray: #f8f9fa;
+$gray: #dee2e6;
 
 // Assigns primary, secondary, light, and dark to specific colors
 $primary: $blue-dark;
