POWR-911 add homepage layout, update topics view

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -198,19 +198,11 @@ ol.steps ul ul {
   color: $link-color;
 }
 
-.topic {
-  height: 4rem;
-  margin-bottom: .5rem;
-}
-
-.topic h3 {
-  font-size: $font-size-lg;
-  font-family: $font-family-sans-serif;
-  margin-bottom: 0.5rem;
-}
-
-.topic p {
-  font-size: $font-size-sm;
+.view-topics ul.list-group-flush.row {
+  padding: 0;
+  .list-group-item {
+    border: 0;
+  }
 }
 
 .block-copyright-block {
