POWR-911 update panel config, top search view, styles

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -32,6 +32,13 @@ h1 {
   line-height: $headings-line-height;
 }
 
+/* TODO: figure out where to put this */
+
+h1.homepage-title {
+  margin: 2rem 0 0 0;
+}
+
+
 input {
   &[type='text'],
   &[type='search'] {
@@ -350,4 +357,12 @@ issue is caused by inheriting .button */
 
 .ui-datepicker {
   width: auto;
+}
+
+.main-content {
+  margin-top: 3rem;
+}
+
+.path-frontpage .main-content {
+  margin-top: 0 !important;
 }
