--- a/web/themes/custom/cloudy/scss/components/_search.scss
+++ b/web/themes/custom/cloudy/scss/components/_search.scss
@@ -11,7 +11,8 @@
     flex: 1 1 auto;
   }
   .form-search {
-    border: $border-width solid $border-color;
+    border: $border-width solid;
+    border-right: 0px;
     border-radius: $border-radius-tight 0 0 $border-radius-tight !important;
     margin: 0;
   }
@@ -21,7 +22,7 @@
   .form-submit {
     @extend .btn;
     @extend .btn-light;
-    border: $border-width solid $border-color;
+    border: $border-width solid;
     border-radius: 0 $border-radius-tight $border-radius-tight 0;
     margin: 0;
   }
@@ -30,7 +31,7 @@
 .main-content {
   .search-api-page-block-form {
     form {
-      margin: $spacer 0;
+      margin: $spacer 0 0 0;
     }
     .form-search,
     .form-action {
@@ -43,12 +44,18 @@
   }
 }
 
-.path-frontpage {
-  .main-content {
-    .search-api-page-block-form {
-      form {
-        margin: $spacer * 4 0 $spacer;
-      }
-    }
-  }
+.path-frontpage .search-region-container {
+  background-color: #F8F9FA;
+  padding: 4rem 0;
+}
+
+.popular {
+  background-color: $gray-300;
+  height: 100%;
+  padding: 1rem 15px;
+}
+
+.popular h2 {
+  @extend .lead;
+  margin-bottom: .25rem;
 }
