--- a/web/themes/custom/cloudy/templates/layout/cloudy-homepage.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/cloudy-homepage.html.twig
@@ -12,15 +12,22 @@
  */
 #}
 <div class="cloudy-homepage">
-    <div class="home-search-region row">
-      <div class="col-md-6 p-0 home-search">
-        {{ content.search }}
-      </div>
-      <div class="col-md-6 popular">
-        {{ content.popular }}
-      </div>
+    <div class="search-region-container">
+        <div class="home-search-region container">
+            <div class="row">
+                <div class="col-md-6 p-0 home-search">
+                    <h1 class="title homepage-title">Search Portland.gov</h1>
+                    {{ content.search }}
+                </div>
+                <div class="col-md-6">
+                    <div class="popular">
+                        {{ content.popular }}
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="home-terms row">
+    <div class="home-terms container">
         {{ content.terms }}
     </div>
   </div>
