POWR-911 update the page template to conditionally add container

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -79,7 +79,15 @@
     {{ page.pre_content }}
   </section>
 {% endif %}
-<main class="main-content row-offcanvas row-offcanvas-left" id="content" role="main">
+{%
+  set main_classes = [
+    'main-content',
+    'row-offcanvas',
+    'row-offcanvas-left',
+    not is_front ? 'container',
+  ]
+%}
+<main {{ attributes.addClass(main_classes) }} id="content" role="main">
   {{ page.content }}
 </main>
 <footer class="site-footer bg-light text-dark">
