POWR-911 search button

--- a/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
+++ b/web/themes/custom/cloudy/scss/_bootstrap-overrides.scss
@@ -3,6 +3,7 @@
 // Assigns color names to specific hex values
 $blue: #418fde;
 $blue-dark: #1b5a99;
+$blue-darker: #0b4177;
 $cyan: #17a2b8;
 $green: #046a38;
 $red: #dc3545;
