--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -202,7 +202,14 @@ ol.steps ul ul {
 
 .view-community-actions .list-group-item-action,
 .view-audiences-homepage .list-group-item-action {
-  color: $link-color;
+  color: #FFF;
+  background-color: $link-color;
+}
+
+.view-community-actions .list-group-item-action:hover,
+.view-audiences-homepage .list-group-item-action:hover {
+  color: #FFF;
+  background-color: $blue-darker;
 }
 
 .view-topics ul.list-group-flush.row {
@@ -365,4 +372,12 @@ issue is caused by inheriting .button */
 
 .path-frontpage .main-content {
   margin-top: 0 !important;
+}
+
+.list-group-item.topic {
+  padding: .75rem 1rem;
+}
+
+.top-search {
+  padding-left: 0;
 }
