--- a/web/themes/custom/cloudy/scss/components/_search.scss
+++ b/web/themes/custom/cloudy/scss/components/_search.scss
@@ -25,6 +25,10 @@
     border: $border-width solid;
     border-radius: 0 $border-radius-tight $border-radius-tight 0;
     margin: 0;
+    font-family: "Font Awesome\ 5 Free";
+    font-style: normal;
+    content: "\f002"; /* FontAwesome Unicode */
+    font-weight: 900;
   }
 }
 
@@ -40,6 +44,7 @@
     }
     .form-submit {
       padding: 0 $input-btn-padding-x-lg * 2;
+      font-size: 2rem;
     }
   }
 }
@@ -52,7 +57,7 @@
 .popular {
   background-color: $gray-300;
   height: 100%;
-  padding: 1rem 15px;
+  padding: 1rem;
 }
 
 .popular h2 {
