--- a/web/themes/custom/cloudy/templates/layout/cloudy-homepage.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/cloudy-homepage.html.twig
@@ -15,11 +15,11 @@
     <div class="search-region-container">
         <div class="home-search-region container">
             <div class="row">
-                <div class="col-md-6 p-0 home-search">
+                <div class="col-lg-6 col-md-12 home-search">
                     <h1 class="title homepage-title">Search Portland.gov</h1>
                     {{ content.search }}
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6 col-md-12 ">
                     <div class="popular">
                         {{ content.popular }}
                     </div>
@@ -28,6 +28,6 @@
         </div>
     </div>
     <div class="home-terms container">
-        {{ content.terms }}
+        {{ content.terms }} 
     </div>
   </div>
